initiate changes from command line

--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 <body>
-    <i class="fa-solid fa-circle-user" >my account</i>
-    <i class="fa-thin fa-fire-flame"></i>
-<h1 class="center">Wag!</h1>
-<div class="menu">
+    <div class="menu_bar">
+        <h1 class="logo">Wag!</h1>
 <ul>
-        <li><a href="">service</a></li> 
-        <li><a href="">Head&wellness</a></li>
+        <li>
+            <a href="">service <i class="fa-solid fa-caret-down"></i></a></li> 
+        <li>
+            <a href="">Head&wellness <i class="fa-solid fa-caret-down"></i></a></li>
         <li><a href="">Reasources</a></li>
-        <li><a href="">Helpcenter&Safety</a></li>
-        <li><a href="">deals</a></li>
+        <li><a href="./pages/helpcenter.html">Helpcenter&Safety</a></li>
+        <li>
+            <a href="">deals<i class="fa-solid fa-fire-flame"></i></a></li> 
+        <i class="fa-solid fa-circle-user" >my account</i><i class="fa-solid fa-caret-down"></i>
 </ul>
+    </div>
         <div class="content">
             <h2>Become a Dog<br><span>Walker with Wag!</span></h2>
-            <pre class="par">Join our community of over 400k pet<br> caregivers nationwide</pre>
+            <p class="par">Join our community of over 400k pet<br> caregivers nationwide</p>
             <img src="./image/image 1.jpg" width="40px" height="40px" >
             <img src="./image/image 2.jpg" width="40px" height="40px">
             <img src="./image/image 3.jpg" width="40px" height="40px">
@@ -36,7 +39,6 @@
         <input type="name" name="first name" placeholder="Legal last name"><br>
         <input type="email" name="email" placeholder="email address"><br>
         <input type="number" name="phone number" placeholder="pnone number">
-
         <p> By submitting my phone number,I agree to receive automated and non-
         automated transactional and marketing calls/texts from Wag!. consent
         not required; text STOP to 24006 to opt out. Opt out instruction subject
