initiate changes from command line

--- a/pages/helpcenter.html
+++ b/pages/helpcenter.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <h1 class="center">Wags!</h1>  
-   <a href="../index.html"></a>
+   <a href="../index.html">back to home</a>
    <div class="main">
    <h2>Hi! How can we help?</h2>
    <p>Find answers to all your questions about the Wag! app here.</p>
