--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="">service <i class="fa-solid fa-caret-down"></i></a></li> 
         <li>
             <a href="">Head&wellness <i class="fa-solid fa-caret-down"></i></a></li>
-        <li><a href="">Reasources</a></li>
+        <li><a href="./pages/resources.html">Resources</a></li>
         <li><a href="./pages/helpcenter.html">Helpcenter&Safety</a></li>
         <li>
             <a href="">deals<i class="fa-solid fa-fire-flame"></i></a></li> 
