initiate resource images changes

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -18,7 +18,32 @@
     </ul>
    </div>
    <div class="main">
-    <p><img src="../image/wags dog.jpg" height="200px" width="1370px"></p>
+    <p><img src="../image/wags dog.jpg"></p>
+    <div class="banner-text">
+    <h2>Dog Care Guides</h2>
+    <p>Home > Dog care Guides</p>
+    </div>
+   </div>
+   <div class="content"> 
+     <ul>
+    <li><a href="">Conditions</a></li>
+    <li><a href="">Treatments</a></li>
+    <li><a href="">Symptoms</a></li>
+    <li><a href="">Wellness</a></li>
+</ul>
+   </div>
+   <div class="container">
+    <h3>Most Recent Care Guides</h3>
+    <img src="../image/why-is-my-dog-licking-air.jpg" width="250px" height="100px">
+    <img src="../image/progressive-diseases-of-the-spine.jpg" width="250px" height="100px">
+    <img src="../image/chronic-anemia.jpg" width="250px" height="100px"><br>
+    <img src="../image/Digestive-Problems.jpg" width="250px" height="100px">
+    <img src="../image/dyschondroplasia.jpg"  width="250px" height="100px">
+    <img src="../image/osteogenesis-imperfecta.jpg" width="250px"  height="100px"><br>
+    <img src="../image/flea-borne-diseases.jpg" width="250px" height="100px">
+    <img src="../image/sciatic-nerve-injury.jpg" width="250px" height="100px">
+    <img src="../image/tendon-trauma.jpg" width="250px" height="100px">
+<hr>
    </div>
 </body>
 </html>
