initiate changes from command line

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -18,7 +18,7 @@
     </ul>
    </div>
    <div class="main">
-    <p><img src="../image/wags dog.jpg"></p>
+    <p><img src="../image/wags dog.jpg" width="1350px" height="200px"></p>
     <div class="banner-text">
     <h2>Dog Care Guides</h2>
     <p>Home > Dog care Guides</p>
