initiate changes in resources pages

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -63,8 +63,20 @@
 <hr><br>
 <h3>Other Guides</h3>
 <div id="div1">How often Should Kittens Sleep?<br>Is Sunshine Mills V eterinary Select Dog Food Best For My Dog?<br>Which Eco-Friendly Dog Collar Is Best for My Puppy?<br>Can Dogs Be Allergies to Blankets?<br>Is Joy Ultimate Dog Food Best For My Dog?<br>Is Joy Performance Dod Food Best For My Dog?<br>Can a Dog Benefit from CBD?<BR>How to Travel With an Elderly Dog:5 Things You Should Know<br>How to Administer Prescription Antibiotics to Pets<br>How to keep Your Pets Safe from a Tornard</div>
-<div id="div2">Antioxidants for Dogs<br>How Often Should Cats Sleep?<br><br>Is Dr Harvey's Dog Food Best For My Dog?<br><br>Can a Dogs Be Allergic to Their Beds?<br>Is Beneful Prepared Meals Dog Food Best for My Dog?<br>How to set a Daily Routine for Your New P uppy<br>How Do You Calm a Nervous Rescue Dog?<br><br>How to Mitigate Your Dog's Temper Tantrums<br>6 Awesome Benefits of Duck Meat for Dogs<br>How High Can Cats Jump?</div>
+<div id="div2">Antioxidants for Dogs<br>How Often Should Cats Sleep?<br>Is Dr Harvey's Dog Food Best For My Dog?<br><br>Can a Dogs Be Allergic to Their Beds?<br>Is Beneful Prepared Meals Dog Food Best for My Dog?<br>How to set a Daily Routine for Your New P uppy<br>How Do You Calm a Nervous Rescue Dog?<br>How to Mitigate Your Dog's Temper Tantrums<br>6 Awesome Benefits of Duck Meat for Dogs<br>How High Can Cats Jump?</div>
 <div id="div3">How Much Exercise Do Dogs Need?<br>What Should I Do if My Dog Eats a Slug?<br>Is American Journey's Grain-Free Chicken Recipe Best For My cat?<br>Can Dogs Be Allergic to Adhesive Bandages?<br>How Old is Too Old for Your Pet to Travel With You?<br>How Do I Get My Rescue Dog to Bond?<br>4 Crucial Yard Mistakes to Avoid for Your Pet's Safety<br><br>How to Safety Break Up a Dog Fight<br>Can Dogs Eat Watermelon?<br>View All</div>
    </div>
+   <div class="menu_bar"> 
+    <h4>wag!<br><p>Help Center</p></h4>
+    
+    <ul>
+    <li>About Wag!<br>Trust and Safety<br>Do not share my info<br>Community Guideliness<br>Wag!Partners<br>Press<br>blog<br>Careers<br>Become a Dog Walker</li>
+    <li>Top Wag! Cities<br>San Francisco<br>Los Angeles<br>Chicago<br>New York<br>Atlanta<br>WashingtonD.C<BR>Dallas<br>Miami<br>Philadelphia</li>
+    <li>Resource<br>Dog Health<br>Dog Training<br>Dog Grooming<br>Dog Breeds<br>Dog Names<br>Dog Activities<br>Dog Senses<br>Dog Behavior</li>
+    <li>Lifestyles<br>Dog Beaches<br>Dog Campgrounds<br>Dog Parks<br>Dog Trails<br><br>
+        <li>Security<br>Responsible Disclosure</li>
+    </li>
+   </div>
+ 
 </body>
 </html>
