push all changes in resources pages

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/resources.css"> 
     <title>RESOURCES</title>
-    <link rel="stylesheet" href="../style/resources.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 <body>
    <a href="../index.html">back to home</a> 
@@ -70,13 +71,26 @@
     <h4>wag!<br><p>Help Center</p></h4>
     
     <ul>
-    <li>About Wag!<br>Trust and Safety<br>Do not share my info<br>Community Guideliness<br>Wag!Partners<br>Press<br>blog<br>Careers<br>Become a Dog Walker</li>
-    <li>Top Wag! Cities<br>San Francisco<br>Los Angeles<br>Chicago<br>New York<br>Atlanta<br>WashingtonD.C<BR>Dallas<br>Miami<br>Philadelphia</li>
-    <li>Resource<br>Dog Health<br>Dog Training<br>Dog Grooming<br>Dog Breeds<br>Dog Names<br>Dog Activities<br>Dog Senses<br>Dog Behavior</li>
-    <li>Lifestyles<br>Dog Beaches<br>Dog Campgrounds<br>Dog Parks<br>Dog Trails<br><br>
-        <li>Security<br>Responsible Disclosure</li>
+    <li><a href="">About Wag!<br></a> and Safety<br>Do not share my info<br>Community Guideliness<br>Wag!Partners<br>Press<br>blog<br>Careers<br>Become a Dog Walker</li>
+    <li><a href="">Top Wag! Cities<br></a> Francisco<br>Los Angeles<br>Chicago<br>New York<br>Atlanta<br>WashingtonD.C<BR>Dallas<br>Miami<br>Philadelphia</li>
+    <li><a href="">Resource<br></a> Health<br>Dog Training<br>Dog Grooming<br>Dog Breeds<br>Dog Names<br>Dog Activities<br>Dog Senses<br>Dog Behavior</li>
+    <li><a href="">Lifestyles<br></a> Beaches<br>Dog Campgrounds<br>Dog Parks<br>Dog Trails<br><br>
+        <li><a href="">Security<br></a>Responsible Disclosure</li>
     </li>
    </div>
- 
+ <hr>
+ <div class="Icons">
+    <ul>
+        <li><a href="">2024 Wags Labs ,Inc.All rights reserved.</a></li>
+        <li><a href="">Private policy</a></li>
+        <li><a href="">CA Privacy</a></li>
+        <li><a href="">Terms $ conditions</a></li>
+        <li><a href="">Accesibility</a></li>
+        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href=""><i class="fa-brands fa-square-twitter"></i></a></li>
+        <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
+    </ul>
+ </div>
 </body>
 </html>
