initiate resources pages all changes

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -48,28 +48,29 @@
    </div>
    <div class="box">
     <h3>Most Popular Condition Guides</h3>
-<div id="div1">Heardenig and Blockage of the Arteris<br>Gas in Dogs<br>Xanax Toxicity<br>Ear Hematoma<br>Low Blood Albumin<br>Gluten Allergies<br>Snake Bite<br>Broken Leg<br>View All</div>
-<div id="div2">Septic Shock<br>Stomach and Intestinal Ulcers<br>Testicular Swelling<br>Antidepressant Poisoning<br>Bleeding of the Retina in the Eye<br>Dry Hacking<br>Black Spots in Eyes<br>Masticatory Muscle Mysitis<br>Laundry Detergent Allergies<br>Heart Attack</div>
-<div id="div3">Crystals in the Urine<br>Chronic Vomiting<br>Blood in the Urine<br>Rectal Itching<br>Fertilizers Poisoning<br>Obsessive Compulsive Disorders<br>Split Nails<br>Intestinal Obstruction<br>Ataxia<br>Food Sensitivity and Allergies in Jack Russell Terriers</div>
+<a href=""><div id="div1">Heardenig and Blockage of the Arteris<br>Gas in Dogs<br>Xanax Toxicity<br>Ear Hematoma<br>Low Blood Albumin<br>Gluten Allergies<br>Snake Bite<br>Broken Leg<br>View All</a></div>
+<a href=""><div id="div2">Septic Shock<br>Stomach and Intestinal Ulcers<br>Testicular Swelling<br>Antidepressant Poisoning<br>Bleeding of the Retina in the Eye<br>Dry Hacking<br>Black Spots in Eyes<br>Masticatory Muscle Mysitis<br>Laundry Detergent Allergies<br>Heart Attack</a></div>
+<a href=""><div id="div3">Crystals in the Urine<br>Chronic Vomiting<br>Blood in the Urine<br>Rectal Itching<br>Fertilizers Poisoning<br>Obsessive Compulsive Disorders<br>Split Nails<br>Intestinal Obstruction<br>Ataxia<br>Food Sensitivity and Allergies in Jack Russell Terriers</a></div>
 <hr><br>
 <h3>Most Popular Treatment Guides</h3>
-<div id="div1">Trochlear Recession<br>Typhlectomy<br>Rectal Reduction and Resection<br>Surgical Removal of Dead Tissue<br>Orthopedic Surgery<br>Episioplasty<br>Caudectomy<br>Meniscectomy<br>Inhaled Foreign Body Removal<br>View All</div>
-<div id="div2">Natural Urinary Tract Infection Remedies<br>Ureteroneocystostomy<br>Under and over Fascial Repair<br>Radioactive Iodine Therapy<br>Cycloablation<br>Reiki<br>Grid Keratotomy<br>Nebulizer<br>Erythromycin for Dogs<br>Natural Ear Infection Remedies</div>
-<div id="div3">Fixation of Fractuared Ribs<br>Ulnar Ostectomy<br>Cystoscopy<br>Holistic Bronchitis Treatment<br>Glucosamine and Chondroitin Supplements<br>Feeding Tubes<br>Natural Hypothyroidism Remedies<br>Sarcoid Treatments<br>Abdominocentesis<br>Surgical Removal of Gallbladder Obstruction</div>
+<a href=""><div id="div1">Trochlear Recession<br>Typhlectomy<br>Rectal Reduction and Resection<br>Surgical Removal of Dead Tissue<br>Orthopedic Surgery<br>Episioplasty<br>Caudectomy<br>Meniscectomy<br>Inhaled Foreign Body Removal<br>View All</a></div>
+<a href=""><div id="div2">Natural Urinary Tract Infection Remedies<br>Ureteroneocystostomy<br>Under and over Fascial Repair<br>Radioactive Iodine Therapy<br>Cycloablation<br>Reiki<br>Grid Keratotomy<br>Nebulizer<br>Erythromycin for Dogs<br>Natural Ear Infection Remedies</a></div>
+<a href=""><div id="div3">Fixation of Fractuared Ribs<br>Ulnar Ostectomy<br>Cystoscopy<br>Holistic Bronchitis Treatment<br>Glucosamine and Chondroitin Supplements<br>Feeding Tubes<br>Natural Hypothyroidism Remedies<br>Sarcoid Treatments<br>Abdominocentesis<br>Surgical Removal of Gallbladder Obstruction</a></div>
 <hr><br>
 <h3>Most Popular Symptoms Guides</h3>
-<div id="div1">Heaving<br>Wheezing<br>Jumping<br>Choking<br>Sneezing<br>Balding<br>Crying While Chewing<br>Shedding<br>Nausea<br>View All</div>
-<div id="div2">Passing Yellow Stools<br>Hyperventillating<br>Peeling Often<br>Why is My Dog Graining Weighr?<br>Hiding<br>Shivering<br>Squinting<br>Jolting<br>Breathing Quickly<br>Itchy and Smelly</div>
-<div id="div3">Dry Heaving<br>Panting<br>Eating Poop<br>Refusing to Drink<br>Barking<br>Droopy Eyes<br>Bloated<br>Hyper<br>Urinating Frequently<br>Eating Leaves</div>
+<a href=""><div id="div1">Heaving<br>Wheezing<br>Jumping<br>Choking<br>Sneezing<br>Balding<br>Crying While Chewing<br>Shedding<br>Nausea<br>View All</a></div>
+<a href=""><div id="div2">Passing Yellow Stools<br>Hyperventillating<br>Peeling Often<br>Why is My Dog Graining Weighr?<br>Hiding<br>Shivering<br>Squinting<br>Jolting<br>Breathing Quickly<br>Itchy and Smelly</a></div>
+<a href=""><div id="div3">Dry Heaving<br>Panting<br>Eating Poop<br>Refusing to Drink<br>Barking<br>Droopy Eyes<br>Bloated<br>Hyper<br>Urinating Frequently<br>Eating Leaves</a></div>
 <hr><br>
 <h3>Other Guides</h3>
-<div id="div1">How often Should Kittens Sleep?<br>Is Sunshine Mills V eterinary Select Dog Food Best For My Dog?<br>Which Eco-Friendly Dog Collar Is Best for My Puppy?<br>Can Dogs Be Allergies to Blankets?<br>Is Joy Ultimate Dog Food Best For My Dog?<br>Is Joy Performance Dod Food Best For My Dog?<br>Can a Dog Benefit from CBD?<BR>How to Travel With an Elderly Dog:5 Things You Should Know<br>How to Administer Prescription Antibiotics to Pets<br>How to keep Your Pets Safe from a Tornard</div>
-<div id="div2">Antioxidants for Dogs<br>How Often Should Cats Sleep?<br>Is Dr Harvey's Dog Food Best For My Dog?<br><br>Can a Dogs Be Allergic to Their Beds?<br>Is Beneful Prepared Meals Dog Food Best for My Dog?<br>How to set a Daily Routine for Your New P uppy<br>How Do You Calm a Nervous Rescue Dog?<br>How to Mitigate Your Dog's Temper Tantrums<br>6 Awesome Benefits of Duck Meat for Dogs<br>How High Can Cats Jump?</div>
-<div id="div3">How Much Exercise Do Dogs Need?<br>What Should I Do if My Dog Eats a Slug?<br>Is American Journey's Grain-Free Chicken Recipe Best For My cat?<br>Can Dogs Be Allergic to Adhesive Bandages?<br>How Old is Too Old for Your Pet to Travel With You?<br>How Do I Get My Rescue Dog to Bond?<br>4 Crucial Yard Mistakes to Avoid for Your Pet's Safety<br><br>How to Safety Break Up a Dog Fight<br>Can Dogs Eat Watermelon?<br>View All</div>
+<a href=""><div id="div1">How often Should Kittens Sleep?<br>Is Sunshine Mills V eterinary Select Dog Food Best For My Dog?<br>Which Eco-Friendly Dog Collar Is Best for My Puppy?<br>Can Dogs Be Allergies to Blankets?<br>Is Joy Ultimate Dog Food Best For My Dog?<br>Is Joy Performance Dod Food Best For My Dog?<br>Can a Dog Benefit from CBD?<BR>How to Travel With an Elderly Dog:5 Things You Should Know<br>How to Administer Prescription Antibiotics to Pets<br>How to keep Your Pets Safe from a Tornard</a></div>
+<a href=""><div id="div2">Antioxidants for Dogs<br>How Often Should Cats Sleep?<br>Is Dr Harvey's Dog Food Best For My Dog?<br><br>Can a Dogs Be Allergic to Their Beds?<br>Is Beneful Prepared Meals Dog Food Best for My Dog?<br>How to set a Daily Routine for Your New P uppy<br>How Do You Calm a Nervous Rescue Dog?<br>How to Mitigate Your Dog's Temper Tantrums<br>6 Awesome Benefits of Duck Meat for Dogs<br>How High Can Cats Jump?</a></div>
+<a href=""><div id="div3">How Much Exercise Do Dogs Need?<br>What Should I Do if My Dog Eats a Slug?<br>Is American Journey's Grain-Free Chicken Recipe Best For My cat?<br>Can Dogs Be Allergic to Adhesive Bandages?<br>How Old is Too Old for Your Pet to Travel With You?<br>How Do I Get My Rescue Dog to Bond?<br>4 Crucial Yard Mistakes to Avoid for Your Pet's Safety<br><br>How to Safety Break Up a Dog Fight<br>Can Dogs Eat Watermelon?<br>View All</a></div>
    </div>
    <div class="menu_bar"> 
-    <h4>wag!<br><p>Help Center</p></h4>
-    
+    <h4>wag!<br><p>Help Center</p></h4><br>
+    <img src="../image/app store.jpg"><br><br>
+    <img src="../image/google play.jpg">
     <ul>
     <li><a href="">About Wag!<br></a> and Safety<br>Do not share my info<br>Community Guideliness<br>Wag!Partners<br>Press<br>blog<br>Careers<br>Become a Dog Walker</li>
     <li><a href="">Top Wag! Cities<br></a> Francisco<br>Los Angeles<br>Chicago<br>New York<br>Atlanta<br>WashingtonD.C<BR>Dallas<br>Miami<br>Philadelphia</li>
