initiate changes in home pages

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <p> By submitting my phone number,I agree to receive automated and non-
         automated transactional and marketing calls/texts from Wag!. consent
         not required; text STOP to 24006 to opt out. Opt out instruction subject
-        to change. Message and data rates may apply. Mobile Term apply.</p>
-     <input type="checkbox" value="I agree to Wag! terms (including a mutual arbitration clause) and privacy policy">I agree to Wag! terms (including a mutual arbitration clause) and privacy policy<br>
-     <input type="checkbox" value="I confirm that I am a US resident and am over 18">I confirm that I am a US resident and am over 18<br>
+        to change. Message and data rates may apply. Mobile Term apply.</p><br>
+     <input type="checkbox" value="I agree to Wag! terms (including a mutual arbitration clause) and privacy policy">I agree to Wag! terms (including a mutual arbitration clause) and privacy policy<br><br>
+     <input type="checkbox" value="I confirm that I am a US resident and am over 18">I confirm that I am a US resident and am over 18<br><br>
      <input type="submit" value="Get started" onclick="validate()">
        </div>
 </body>
