--- a/pages/helpcenter.html
+++ b/pages/helpcenter.html
@@ -16,7 +16,7 @@
    </div>
    <div class="search">
     <i class="fa-solid fa-magnifying-glass"></i>
-    <input class="srch" type="search" name="" placeholder="search the help center">
+    <input class="srch" type="search" name="" placeholder="search the help center"><br>
    </div>
    <div class="content">
     <h3>Browse by category</h3>
